prowlarr/prowlarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media-services
spec:
  selector:
    app: prowlarr
  ports:
    - name: prowlarr
      port: 9696
      targetPort: 9696
